a bunch of content

--- a/_posts/2012-04-01-bradbury-quote.html
+++ b/_posts/2012-04-01-bradbury-quote.html
@@ -3,6 +3,7 @@ layout: post
 title:  "Ray Bradbury Quote"
 date:   2012-04-01
 categories: fun quotes
+lead: ""
 ---
 
 <p>We are all cups, constantly and quietly being filled. The trick is, knowing how to tip ourselves over and let the beautiful stuff out.</p>
