--- a/_posts/2012-04-15-poetry-oklahoma.html
+++ b/_posts/2012-04-15-poetry-oklahoma.html
@@ -3,6 +3,7 @@ layout: post
 title:  "Oklahoma"
 date:   2011-07-12
 categories: fun poetry
+lead: "Poem about Oklahoma"
 ---
 
 I am built of nothing more than dirt and rust<br/>
