--- a/_posts/2015-05-04-dejavu.html
+++ b/_posts/2015-05-04-dejavu.html
@@ -3,6 +3,7 @@ layout: post
 title:  "Deja Vu by You"
 date:   2015-05-04
 categories: fun design
+lead: "Here goes nothing!!"
 ---
 
 <div class="twelve columns">
