added pencil header and footer background images

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 <div>
-	<a href="http://www.jenningshanna.com">Back to JenningsHanna.com</a>
+	
 </div>
 <div class="home">
 	
-  <p class="rss-subscribe" style="float: right; font-size: 12px; margin-top: -19px;">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+  <p class="rss-subscribe" style="float: right; font-size: 12px; margin-top: -19px;">Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a> or go back to <a href="http://www.jenningshanna.com">JenningsHanna.com</a></p>
   
   <h1 style="padding: 10px 15px; background-color: #6DBCDB; border-radius: 4px;" class="page-heading">Posts</h1>
 
