importing post from medium

--- a/_posts/2016-05-27-staying-gold.html
+++ b/_posts/2016-05-27-staying-gold.html
@@ -1,22 +1,23 @@
 ---
 layout: post
 title:  "Staying Gold in the Valley of Shadows"
-date:   2015-05-04
+date:   2016-05-27
 categories: design
 lead: ""
 ---
 
-Staying Gold in the Valley of Shadows
+#Staying Gold in the Valley of Shadows
+
 In the novel The Outsiders by S. E. Hinton the protagonist Ponyboy and Johnny are jumped and accidentally murder an opposing gang member. They seek refuge in a church in a small town outside of my hometown of Tulsa, Oklahoma. While in refuge Johnny gives Ponyboy a copy of this poem by Robert Frost.
 
-Nature’s first green is gold,
-Her hardest hue to hold.
-Her early leaf’s a flower; 
-But only so an hour.
-Then leaf subsides to leaf,
-So Eden sank to grief,
-So dawn goes down to day
-Nothing gold can stay.
+> Nature’s first green is gold,
+> Her hardest hue to hold.
+> Her early leaf’s a flower; 
+> But only so an hour.
+> Then leaf subsides to leaf,
+> So Eden sank to grief,
+> So dawn goes down to day
+> Nothing gold can stay.
 
 When I left a small design firm in Oklahoma to pursue a masters degree in 2012 I thought I wanted to work at a greater scale. For nearly seven years, the majority of my youthful twenties I had produced content and design for all types of clients in Tulsa. Great clients! Albeit most were not behemoth corporations or tech companies, they were clients that loved and trusted us to do our best work for their small and often family run businesses. Businesses that were mostly so small they couldn’t take many risk.
 
